<resources>
    <string name="app_name">Trinkster</string>
    <string name="action_search">Suche</string>
    <string name="action_impressum">Impressum</string>
    <string name="impressum_title">Impressum - Trinkster</string>
    <string name="impressum_text">
        <![CDATA[
        Diese App wurde im Rahmen des Modules "Clinical Apps for Tabs" des Studienganges Medizininformatik erstellt.<br /><br />
        <b>Kontaktadresse</b><br />BFH T&I, Höhenweg 80, 2502 Biel/Bienne<br /><br />
        <b>Vertretungsberechtige Personen</b><br />Engel, Dana (dana.engel@students.bfh.ch)<br />Kaufmann, Mirjam (mirjamtanja.kaufmann@students.bfh.ch)<br />Ziegler, Michaela (michaela.ziegler@students.bfh.ch)<br /><br />
        <b>Urheberrechte</b><br />Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf der Website gehören ausschliesslich der Projektgruppe Trinkster oder den speziell genannten Rechtsinhabern. Für die Reproduktion jeglicher Elemente ist die schriftliche Zustimmung der Urheberrechtsträger im Voraus einzuholen.<br /><br />
        <b>Haftungsausschluss</b><br />Verweise und Links auf Webseiten Dritter liegen ausserhalb unseres Verantwortungsbereichs Es wird jegliche Verantwortung für solche Webseiten abgelehnt. Der Zugriff und die Nutzung solcher Webseiten erfolgen auf eigene Gefahr des Nutzers oder der Nutzerin.<br /><br />]]>
    </string>
    <string name="lorem_ipsum">Quisquam quaerat est dolores et excepturi dolores animi. Accusantium sit maxime omnis modi necessitatibus molestiae. Tenetur doloremque eos exercitationem fugiat magni occaecati consequatur. Veritatis ipsam cumque eum et quis maiores laudantium. Atque quis iure aut hic consequatur nesciunt. Repudiandae dolorum aut quam praesentium. Ut repellat eveniet neque provident eum et vero quam. Eos cumque hic ipsam quisquam provident ad. Odit alias velit assumenda placeat vitae cupiditate dicta. Velit commodi nihil veritatis.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">test_Michi</string>
    <string name="section_format">PRosit World from section: %1$d</string>
    
    <string name="tab_text_1">Verlauf</string>
    <string name="tab_text_2">Statistik</string>
    <string name="tab_text_3">‰-Schätzer</string>

    <!-- Statistic-Strings -->
    <string name="TEXT_CALENDAR">Kalender</string>
    <string name="TEXT_NAVIGATE_NEXT">Tag vorher</string>
    <string name="TEXT_NAVIGATE_BEFORE">Tag nachher</string>
    <string name="TEXT_OK">OK</string>
    <string name="TEXT_DAY">Tag</string>
    <string name="TEXT_WEEK">Woche</string>
    <string name="TEXT_MONTH">Monat</string>
    <string name="TEXT_YEAR">Jahr</string>
    <string name="TEXT_CHANGE_TIMELINE">Zeitspanne ändern</string>
    <string name="TEXT_DL"> dl</string>
    <string name="TEXT_BACK">Zurück</string>
    <string name="TEXT_NO_ENTRY">Für dieses Datum wurden keine Einträge erfasst.</string>
    <string name="TEXT_IMAGE">Bild der Getränkekategorie</string>

    <!-- Guess Your BAC-Strings -->
    <string name="TITLE_GUESS_BAC">Promille-Schätzer</string>
    <string name="DESC_GUESS_BAC">Schätze deinen Promille-Wert und vergleiche deinen geschätzten mit deinem gemessenen Wert.</string>
    <string name="EXPLAIN_TEXT_GUESS_BAC">Hier steht ein Beispieltext, welcher beschreibt welche Folgen der Promillewert hat.</string>
    <string name="BTN_COMPARE_BREATHALYZER">Breathalyzer-Vergleich</string>
    <string name="STR_BAC_IN_PROMILLE"> ‰</string>

    <string name="DIALOG_NO_BREATHALYZER_TITLE">Breathalyzer noch nicht verbunden.</string>
    <string name="DIALOG_NO_BREATHALYZER_MESSAGE">Leider ist aktuell noch kein Breathalyzer mit dem Smartphone verbunden - Möchtest du das jetzt nachholen?</string>
    <string name="DIALOG_BREATHALYZER_CONNECTED_TITLE">Breathalyzer erfolgreich verbunden.</string>
    <string name="DIALOG_BREATHALYZER_CONNECTED__MESSAGE">Der Breathalyzer wurde erfolgreich mit dem Smartphone verbunden - Du kannst den Vergleich nun starten.</string>
    <string name="DIALOG_BREATHALYZER_COUNTDOWN_TITLE">Countdown</string>
    <string name="DIALOG_BREATHALYZER_COUNTDOWN_MESSAGE">Bitte bereitmachen zum pusten!\nAktueller Countdown: </string>
    <string name="DIALOG_BREATHALYZER_KEEPBLOWING_TITLE">Jetzt Pusten</string>
    <string name="DIALOG_BREATHALYZER_KEEPBLOWING_MESSAGE">Bitte jetzt kräftig pusten!</string>
    <string name="DIALOG_BREATHALYZER_ANALYZING_TITLE">Analysieren...</string>
    <string name="DIALOG_BREATHALYZER_ANALYZING_MESSAGE">Du kannst das Pusten einstellen. Dein aktueller Promillewert wird jetzt ausgewertet.</string>
    <string name="DIALOG_BREATHALYZER_ANALYZED_TITLE">Dein aktueller Promillewert</string>
    <string name="DIALOG_BREATHALYZER_ANALYZED_MESSAGE">Dein aktueller Promillewert beträgt </string>


    <!-- Quelle https://www.kenn-dein-limit.info/promille-und-folgen.html -->
    <string name="PROMILLE_AB_00">Bei diesem Promillewert wurde noch kein Alkohol konsumiert.</string>
    <string name="PROMILLE_AB_01">Schon kleine Mengen Alkohol wirken enthemmend. Wir werden kontaktfreudiger, unsere Stimmung ist gelöst. Was uns noch nicht auffällt: Bereits jetzt schätzen wir Entfernungen falsch ein.</string>
    <string name="PROMILLE_AB_03">Bei diesem Wert tritt häufig eine leichte Verminderung der Sehleistung auf. Unsere Aufmerksamkeit und das Reaktionsvermögen lassen nach, unsere Kritikfähigkeit ist herabgesetzt und die Risikobereitschaft steigt.</string>
    <string name="PROMILLE_AB_05">Wir sehen immer schlechter (etwa 15% Sehleistung weniger). Auch das Hören ist beeinträchtigt und wir können Geschwindigkeiten nicht mehr richtig einschätzen. Wir sind reizbarer als im nüchternen Zustand.</string>
    <string name="PROMILLE_AB_08">Wir können uns kaum noch konzentrieren und es kommt zum Tunnelblick. Die Reaktionszeit verlängert sich um etwa 30-50% und man hat Gleichgewichtsstörungen. Gleichzeitig werden wir euphorisch, enthemmt und überschätzen uns.</string>
    <string name="PROMILLE_AB_10">Im Rauschstadium kommt es zur weiteren Verschlechterung der Sehfähigkeit und vor allem des räumlichen Sehens. Wir sind verwirrt und haben deutliche Sprech-, Reaktions-, Gleichgewichts- und Orientierungsstörungen. Das sind deutliche Warnsignale für eine Alkoholvergiftung.</string>
    <string name="PROMILLE_AB_20">Bei diesem Promillewert ist professionelle Hilfe gefragt. Wer das Betäubungsstadium erreicht, reagiert kaum noch und bewegt sich unkoordiniert. Durch Erbrechen versucht der Körper, sich zumindest des Alkohols im Magen zu entledigen.</string>
    <string name="PROMILLE_AB_30">Wer so viel Alkohol zu sich nimmt, bringt das eigene Leben in Gefahr. Bewusst- und Reflexlosigkeit, Gedächtnisverlust und schwache Atmung sind die Symptome einer gefährlichen Alkoholvergiftung. Es drohen Lähmungen, Koma, Atemstillstand und Tod.</string>

    <!-- BACTrack-Strings -->
    <string name="TEXT_DISCONNECTED">Disconnected</string>
    <string name="TEXT_CONNECTING">Connecting...</string>
    <string name="TEXT_DISCOVERING_SERVICES">Discovering services...</string>
    <string name="TEXT_CONNECTED">Connected!</string>

    <string name="TEXT_FIRMWARE_VERSION">"Firmware version: </string>
    <string name="TEXT_SERIAL_NUMBER">Serial number: </string>
    <string name="TEXT_USE_COUNT">Use count: </string>
    <string name="TEXT_BATTERY_VOLTAGE">Battery voltage: </string>
    <string name="TEXT_BATTERY_LEVEL">Battery level: </string>

    <string name="TEXT_COUNTDOWN">Countdown: </string>
    <string name="TEXT_BLOW_NOW">Blow now!</string>
    <string name="TEXT_KEEP_BLOWING">Keep blowing...</string>
    <string name="TEXT_ANALYZING">Analyzing...</string>
    <string name="TEXT_FINISHED">Done! Result: </string>

    <string name="TEXT_ERR_NO_BREATHALYZERS_FOUND">Error: No breathalyzers found.</string>
    <string name="TEXT_ERR_BT_NOT_ENABLED">Error: Bluetooth is not enabled.</string>
    <string name="TEXT_ERR_BLE_NOT_SUPPORTED">Error: BLE is not supported on this device.</string>
    <string name="TEXT_ERR_BLOW_ERROR">Error: Blow process failed.</string>
    <string name="TEXT_ERR_LOCATIONS_NOT_ENABLED">Error: Location services are not enabled.</string>

    <!-- History Add Strings -->
    <string name="DRINK_NAME">Getränkename</string>
    <string name="DRINK_AMOUNT">Getränkemenge in dl</string>
    <string name="DRINK_UNSWEETEND">Ungesüsste Getränke</string>
    <string name="DRINK_UNSWEETEND_DESC">Wasser, ungesüsster Tee etc.</string>
    <string name="DRINK_UNSWEETEND_INFO">Der Bedarf an Wasser ist unterschiedlich und hängt von diversen Faktoren ab. Als Richtlinie dient für gesunde Erwachsene 2-2.5 Liter pro Tag.</string>
    <string name="DRINK_OTHER">Sonstige Getränke</string>
    <string name="DRINK_OTHER_DESC">Limonade, Fruchtsaft, Milch etc.</string>
    <string name="DRINK_CAFFEIN">Koffeinhaltige Getränke</string>
    <string name="DRINK_CAFFEIN_DESC">Kaffee, Cola, Energy Drinks etc.</string>
    <string name="DRINK_ALCOHOL">Alkoholhaltige Getränke</string>
    <string name="DRINK_ALCOHOL_DESC">Bier, Wein, Spirituosen, Cocktails etc.</string>
    <string name="DRINK_BTN_CANCEL">Abbrechen</string>
    <string name="DRINK_BTN_SAVE">Speichern</string>
</resources>
