<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistic">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="350dp"
        android:layout_height="475dp"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/txtclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="X"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zeitspanne ändern"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton android:id="@+id/radio_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TEXT_DAY"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton android:id="@+id/radio_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TEXT_WEEK"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton android:id="@+id/radio_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TEXT_MONTH"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton android:id="@+id/radio_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TEXT_YEAR"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEXT_OK"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    </android.support.constraint.ConstraintLayout>